# rivalry-research

./: .gitignore  README.md  pyproject.toml
.claude/: implement_google_scholar.md
app/: app.code-workspace  package.json  pnpm-lock.yaml
app/src/components/: RivalryCard.astro  RivalryHero.astro  TimelineFeed.astro
app/src/layouts/: Layout.astro
app/src/lib/: rivalry.ts  types.ts
app/src/pages/: index.astro
backend/: .env.example  .gitignore  README.md  backend.code-workspace  pyproject.toml
backend/data/: .gitkeep
backend/examples/: analyze_scientific_rivalry.py
backend/src/rivalry_research/: __init__.py  client.py  config.py  models.py  relationships.py  rivalry_agent.py  search.py
backend/src/rivalry_research/cli/: __init__.py  clean.py  file_search_status.py  fs.py  images.py  main.py  sources.py
backend/src/rivalry_research/rag/: __init__.py  file_search_client.py
backend/src/rivalry_research/sources/: __init__.py  arxiv_fetcher.py  credibility.py  image_downloader.py  image_fetcher.py  image_scanner.py  pdf_extractor.py  scholar_fetcher.py  source_aggregator.py  source_scanner.py  utils.py  validation.py  wikipedia_fetcher.py
backend/src/rivalry_research/storage/: analysis_storage.py  source_db.py
examples/: analyze_rivalry_generic.py  analyze_scientific_rivalry.py
src/rivalry_research/: __init__.py  client.py  config.py  logging_utils.py  models.py  relationships.py  rivalry_agent.py  search.py
src/rivalry_research/cli/: file_search_status.py
src/rivalry_research/rag/: __init__.py  file_search_client.py
(+6 files in other folders)
